--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Home</title>
 		<meta name="description" content="Between 150 and 160 characters">
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 
